src/tests/snapshots/molt__tests__modify__match___inner.snap
---
source: src/tests/mod.rs
expression: "super :: super :: modify_code(stringify! (modify), stringify! (inner))"
snapshot_kind: text
---
fn main() {
    let old_name = 42;
    let result = old_name + 1;

    // intentionally misformatted code to make sure rustfmt is
    // run on the code.
    let old_name = 10;
}

fn example10() {
    let value = Some(42);
    let result = match value {
        Some(x) => Ok(x * 2),
        None => Ok(0),
    };

    bar.foo::<Foo2>()?;
}
