src/tests/snapshots/molt__tests__modify__match___rename.snap
---
source: src/tests/mod.rs
expression: "super :: super :: modify_code(stringify! (modify), stringify! (rename))"
snapshot_kind: text
---
fn main() {
    let new_name = 42;
    let result = new_name + 1;

    // intentionally misformatted code to make sure rustfmt is
    // run on the code.
    let new_name = 10;
}

fn example10() {
    let value = Some(42);
    let result = match value {
        Some(x) => Ok(x * 2),
        None => Ok(0),
    };

    bar.foo::<Foo1>()?;
}
